--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - name: Deploy to docker hub
         uses: actions/checkout@v3
+      - run : echo "Deploying to docker"
         # run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         # run: docker build -t cygnetops/react-test -f ./client/Dockerfile.dev ./client
         # run: docker run -e CI=true cygnetops/react-test npm test  
@@ -21,4 +22,3 @@ jobs:
         # run: docker push cygnetops/multi-nginx-10-14
         # run: docker push cygnetops/multi-server-10-14
         # run: docker push cygnetops/multi-worker-10-14
-        
