--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to docker hub
-        uses: actions/checkout@v3
+        uses: docker/login-action@v2
       # - run : echo "Deploying to docker"
       - run : docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - run : docker build -t cygnetops/react-test -f ./client/Dockerfile.dev ./client
