--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,8 +10,11 @@ jobs:
     steps:
       - name: Deploy to docker hub
         uses: docker/login-action@v2
+        with: 
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       # - run : echo "Deploying to docker"
-      - run : docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      # - run : docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - run : docker build -t cygnetops/react-test -f ./client/Dockerfile.dev ./client
       - run : docker run -e CI=true cygnetops/react-test npm test  
       - run : docker build -t cygnetops/multi-client-10-14 ./client
